# concierge

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release-container.yml
auth/: Cargo.toml
auth/src/: claims.rs  config.rs  google.rs  interceptor.rs  jwks.rs  lib.rs  management.rs  provisioner.rs  service.rs  service_token.rs  signer.rs  telemetry.rs  verifier.rs
contracts/: Cargo.toml  build.rs
contracts/proto/concierge/v1/: auth.proto  directory.proto  events.proto  health.proto  log.proto  notification.proto  platform.proto
contracts/src/: lib.rs
contracts/tests/: user_lifecycle_event.rs
deploy/: config.nix
domain/: Cargo.toml
domain/src/: auth.rs  authz.rs  error.rs  lib.rs  users.rs
runner/: Cargo.toml
runner/migrations/: 0001_users.sql  0002_user_outbox.sql  0003_role.sql  0004_platform_config.sql  0005_drop_redundant_outbox_index.sql  0006_input_limits.sql
runner/src/: authz.rs  bridge.rs  config.rs  directory.rs  lib.rs  log.rs  main.rs  notification.rs  platform.rs  ports.rs  support.rs
runner/src/infrastructure/: db.rs  mod.rs  platform.rs  users.rs
runner/src/web/: mod.rs  oauth.rs  routes.rs  session.rs
runner/tests/: auth_choke_point.rs  authz_gate.rs  bridge.rs  input_limits.rs  platform.rs  user_directory.rs  web_sessions.rs
