cargo-features = ["codegen-backend"]

[workspace]
# `runner/` is the modular-monolith binary (composition root + the auth/directory/
# notification/log modules); `auth` (verification flow + AuthService skeleton) and
# `contracts` (proto → tonic stubs) are the crates downstream service repos import
# by git; `domain` is the wasm-safe shared identity source of truth.
members = ["runner", "auth", "contracts", "domain"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
ev = { version = "0.2.1", package = "ev_lib", default-features = false, features = ["architecture"] }
# Plane-internal crates. Other service repos depend on `evconcierge_contracts` (and,
# transitively, `evconcierge_auth`) by git, so they get the wire stubs and the shared
# token-verification flow from one place.
domain = { path = "domain" }
evconcierge_auth = { path = "auth" }
evconcierge_contracts = { path = "contracts" }
http = "1"
# `rust_crypto` selects the pure-Rust provider — no C/aws-lc-rs toolchain, matching
# the rustls-only stance.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# rustls only (no native-tls), matching how `ev` pulls reqwest.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
# Postgres control plane. Runtime queries (`sqlx::query*`, not the compile-time
# macros) keep `cargo build` independent of a live database, mirroring banking.
sqlx = "0.9.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tonic = "0.13"
tonic-build = "0.13"
tonic-web = "0.13"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.2"

[workspace.lints.rust]
unused_features = "allow"

# smaller target/: trim debuginfo (deps need none), keep line tables for backtraces
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
