cargo-features = ["codegen-backend"]

[workspace]
# `runner/` is the modular-monolith binary (composition root + the auth/directory/
# notification/log modules); `auth` (verification flow + AuthService skeleton) and
# `contracts` (proto → tonic stubs) are the crates downstream service repos import
# by git; `domain` is the wasm-safe shared identity source of truth.
members = ["auth", "contracts", "domain", "runner"]
resolver = "3"

[workspace.dependencies]
# Dyn-compatible async port traits (`Arc<dyn …>`), mirroring banking's ports layer.
async-trait = "0.1.89"
# The site-level auth HTTP surface (runner/src/web): login redirect, OAuth
# callback, session cookies. gRPC stays tonic; this is the one plain-HTTP seam.
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
# Plane-internal crates. Other service repos depend on `evconcierge_contracts` (and,
# transitively, `evconcierge_auth`) by git, so they get the wire stubs and the shared
# token-verification flow from one place.
domain = { path = "domain" }
dotenvy = "0.15.7"
ev = { version = "0.6.0", package = "ev_lib", default-features = false, features = ["architecture"] }
evconcierge_auth = { path = "auth" }
evconcierge_contracts = { path = "contracts" }
form_urlencoded = "1"
getrandom = { version = "0.4", features = ["wasm_js"] }
http = "1"
# `rust_crypto` selects the pure-Rust provider — no C/aws-lc-rs toolchain, matching
# the rustls-only stance.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
prost = "0.14"
# rustls-only Redis for the issuing-side refresh-token state, matching the rustls
# stance (no native-tls). No-op until `REDIS_URL` is set (in-process fallback).
redis = { version = "1.3", default-features = false, features = ["tokio-rustls-comp", "connection-manager", "script"] }
# rustls only (no native-tls), matching how `ev` pulls reqwest.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
smart-default = "^0.7"
# Postgres control plane. Runtime queries (`sqlx::query*`, not the compile-time
# macros) keep `cargo build` independent of a live database, mirroring banking.
sqlx = "0.9.0"
# Constant-time secret comparison for refresh-token rotation.
subtle = "2.6"
thiserror = "^2.0.18"
time = "0.3"
tokio = "^1.52.3"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-web = "0.14"
tower = "^0.5.3"
tower-http = "0.7.0"
tracing = "^0.1.44"
tracing-subscriber = "^0.3.23"
uuid = "^1.23.4"
v_utils = { version = "=2.15.54", features = ["io", "macros", "cli", "xdg"] }

[workspace.lints.rust]
unused_features = "allow"

# smaller target/: trim debuginfo (deps need none), keep line tables for backtraces
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
