[package]
name = "evconcierge_auth"
version = "0.1.0"
edition = "2024"
description = "The concierge plane's auth: the user/session AuthService skeleton plus the shared, server-only stateless verification flow imported by every downstream service repo for local JWKS verification. Wasm-unsafe by design (crypto backend + tonic)."
license = "BlueOak-1.0.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ev = { workspace = true, features = ["error_monitoring"] }
evconcierge_contracts.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tonic.workspace = true
tower.workspace = true
