[package]
name = "evconcierge_contracts"
version = "0.1.0"
edition = "2024"
description = "gRPC wire contracts for the EV concierge plane — generated tonic client+server stubs. The dependency other service repos import by git, alongside evconcierge_auth for the verify flow."
license = "BlueOak-1.0.0"
publish = false

[lints]
workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
