[package]
name = "domain"
version = "0.1.0"
edition = "2024"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
ev = { workspace = true, features = ["wasm"] }
getrandom.workspace = true

[dependencies]
ev.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
