[package]
name = "concierge"
version = "0.1.0"
edition = "2024"
description = "The EV concierge runner — the modular-monolith composition root that mounts the auth, directory, notification, and log gRPC services as one binary."
license = "BlueOak-1.0.0"
publish = false
default-run = "concierge"

[lib]
name = "concierge"
path = "src/lib.rs"

[[bin]]
name = "concierge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
evconcierge_auth.workspace = true
evconcierge_contracts.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid.workspace = true
