[package]
name = "concierge"
version = "0.1.0"
edition = "2024"
description = "The EV concierge runner — the modular-monolith composition root that mounts the auth, directory, notification, and log gRPC services as one binary."
license = "BlueOak-1.0.0"
publish = false
default-run = "concierge"

[lib]
name = "concierge"
path = "src/lib.rs"

[[bin]]
name = "concierge"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
color-eyre.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
evconcierge_auth.workspace = true
evconcierge_contracts.workspace = true
form_urlencoded.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
subtle.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid.workspace = true

[lints]
workspace = true
